cmake_minimum_required(VERSION 3.0.0)
project(Double_Pendulum VERSION 0.1.0)
include_directories("${CMAKE_SOURCE_DIR}/../../libraries/sources/Cinder-0.9.2/Cinder/include")
include_directories("./include")
set(SOURCE ./src/MyApp.cpp
            ./src/DoublePendulum.cpp)
include(CTest)
enable_testing()
add_executable(Double_Pendulum main.cpp ${SOURCE})
target_link_libraries(Double_Pendulum "${CMAKE_SOURCE_DIR}/../../libraries/sources/Cinder-0.9.2/Cinder/lib/msw/x86/Debug/v143/cinder.lib")
set_property(TARGET Double_Pendulum PROPERTY CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd ")
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
